--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 astroid==3.1.0
-autopep8==2.1.0
+black==24.3.0
+click==8.1.7
 contourpy==1.2.0
 cycler==0.12.1
 dill==0.3.8
@@ -8,9 +9,11 @@ isort==5.13.2
 kiwisolver==1.4.5
 matplotlib==3.8.3
 mccabe==0.7.0
+mypy-extensions==1.0.0
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.1
+pathspec==0.12.1
 pillow==10.2.0
 platformdirs==4.2.0
 pycodestyle==2.11.1
